Changed css properties to fix overflow on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,20 @@
 /* Default font */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 html {
+  margin: 0;
+  padding: 0;
   height: 100%;
 }
 
 body {
+  height: 100%;
   margin: 0;
+  padding: 0;
   background: linear-gradient(180deg, #3f3cf3 0%, rgba(255, 255, 255, 0) 100%),
     #1f90c0;
 }
@@ -39,8 +47,7 @@ a {
 }
 
 .wrapper {
-  position: relative;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
